# api-client-rs

./: .gitignore  Cargo.toml  README.md
src/: error.rs  espidf_http_impl.rs  event.rs  lib.rs  parameter.rs  protocol.rs  reqwest_http_impl.rs  varint.rs  websocket.rs
src/client/: espidf_http_impl.rs  event.rs  mod.rs  parameter.rs  protocol.rs  reqwest_http_impl.rs  websocket.rs
src/client/rpc/: mod.rs
src/client/rpc/dataset/: mod.rs  request.rs  response.rs
src/client/rpc/debug/: mod.rs  request.rs  response.rs
src/client/rpc/fs/: mod.rs  request.rs  response.rs
src/client/rpc/image/: mod.rs  request.rs  response.rs
src/client/rpc/language/: mod.rs  request.rs  response.rs
src/client/rpc/model/: mod.rs  request.rs  response.rs
src/client/rpc/persistent_launcher/: mod.rs  request.rs  response.rs
src/client/rpc/spawned/: mod.rs  request.rs  response.rs
src/client/rpc/terminal/: mod.rs  request.rs  response.rs
src/rpc/: mod.rs
src/rpc/dataset/: mod.rs  request.rs  response.rs
src/rpc/debug/: mod.rs  request.rs  response.rs
src/rpc/fs/: mod.rs  response.rs
src/rpc/language/: mod.rs  request.rs
src/rpc/model/: mod.rs  request.rs  response.rs
src/rpc/persistent_launcher/: mod.rs  request.rs  response.rs
src/rpc/spawned/: mod.rs  request.rs  response.rs
src/rpc/terminal/: mod.rs  request.rs  response.rs
src/tensor/: element.rs  mod.rs  tensor_impl.rs
