[package]
name = "decthings-api"
version = "0.0.2"
edition = "2021"
license-file = "LICENSE"
description = "Official Rust API client for Decthings"
homepage = "https://decthings.com"
repository = "https://github.com/decthings/api-client-rs"
readme = "README.md"

[dependencies]
base64 = "0.21"
bytes = "1.5"
byte-slice-cast = "1.2"
futures = "0.3"
ndarray = "0.15"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync"] }
http = "0.2"
tokio-tungstenite = { version = "0.20", features = ["native-tls"], optional = true }

[target.'cfg(not(target_endian = "little"))'.dependencies]
byteorder = "1.5"

[target.'cfg(not(target_os = "espidf"))'.dependencies]
reqwest = "0.11"

[target.'cfg(target_os = "espidf")'.dependencies]
embedded-svc = "0.26"
esp-idf-svc = "0.47"
esp-idf-sys = "0.33"

[features]
default = ["events"]
events = ["dep:tokio-tungstenite"]
