[package]
name = "decthings-api"
version = "0.0.6"
edition = "2021"
license-file = "LICENSE"
description = "Official Rust API client for Decthings"
homepage = "https://decthings.com"
repository = "https://github.com/decthings/api-client-rs"
readme = "README.md"

[dependencies]
base64 = { version = "0.21", optional = true }
bytes = "1.5"
byte-slice-cast = "1.2"
futures = { version = "0.3", optional = true }
ndarray = "0.15"
serde_json = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync"], optional = true }
http = { version = "0.2", optional = true }
tokio-tungstenite = { version = "0.20", features = ["native-tls"], optional = true }

[target.'cfg(not(target_endian = "little"))'.dependencies]
byteorder = "1.5"

[target.'cfg(not(target_os = "espidf"))'.dependencies]
reqwest = { version = "0.11", optional = true }

[target.'cfg(target_os = "espidf")'.dependencies]
embedded-svc = { version = "0.26", optional = true }
esp-idf-svc = { version = "0.47", optional = true }
esp-idf-sys = { version = "0.33", optional = true }

[features]
default = [
    "client",
    "events",
]
events = [
    "client",
    "tokio-tungstenite",
    "futures",
]
client = [
    "base64",
    "embedded-svc",
    "esp-idf-svc",
    "esp-idf-sys",
    "http",
    "reqwest",
    "serde_json",
    "tokio",
]
